# mir2wasm

./: .gitignore  Cargo.toml  README.md  build.rs  fact.js  test.js
rt/: rustrt.js
rust-examples/: cmp.rs  enum.rs  fact.rs  fibonacci.rs  iteration.rs  iterator.rs  nocore-hello-world.rs  operators.rs  option.rs  struct.rs  switchInt.rs
rust-examples/libcore/: any.rs  array.rs  cell.rs  char.rs  cmp.rs  lib.rs  macros.rs  marker.rs  nonzero.rs  ops.rs  option-backup.rs  option.rs  panicking.rs  ptr.rs  result-backup.rs  result.rs  slice.rs
rust-examples/libcore/hash/: mod.rs  sip.rs
rust-examples/libcore/iter/: mod.rs  range.rs  sources.rs
rust-examples/libcore/num/: mod.rs
rust-examples/libcore/prelude/: v1.rs
rust-examples/libcore/str/: mod.rs  pattern.rs
rust-examples/libcore/sync/: atomic.rs
src/: binaryen.rs  lib.rs  monomorphize.rs  traits.rs  trans.rs
tests/: compiletest.rs
tests/compile-pass/: cenum.rs  cmp.rs  enum.rs  fibonacci.rs  iteration.rs  iterator.rs  nocore-hello-world.rs  operators.rs  promoted.rs  struct-derive.rs  switch-int.rs  switchInt.rs  trivial.rs
tests/run-pass/: calls.rs  hello-world-tinycore.rs  ints.rs  nocore-hello-world.rs  pointers.rs  products.rs  specialization.rs  sums.rs
tests/run-pass/tinycore/: mod.rs
