[package]
authors = [
    "Scott Olson <scott@solson.me>",
    "Brian Anderson <banderson@mozilla.com>",
    "Alon Zakai <azakai@mozilla.com>"
]
description = "An experimental compiler from Rust to WebAssembly."
license = "MIT/Apache-2.0"
name = "mir2wasm"
repository = "https://github.com/brson/mir2wasm"
version = "0.1.0"

[[bin]]
doc = false
name = "mir2wasm"

[dependencies]
byteorder = "0.4.2"

[dev-dependencies]
compiletest_rs = "0.1.1"
