[package]
authors = [
    "Scott Olson <scott@solson.me>",
    "Brian Anderson <banderson@mozilla.com>",
    "Alon Zakai <azakai@mozilla.com>"
]
description = "An experimental compiler from Rust to WebAssembly."
license = "MIT/Apache-2.0"
name = "mir2wasm"
repository = "https://github.com/brson/mir2wasm"
version = "0.1.0"
build = "build.rs"

[[bin]]
doc = false
name = "mir2wasm"

[dependencies]
error-chain = "0.1.9"
log = "0.3.6"
env_logger = "0.3.3"

[dev-dependencies]
compiletest_rs = "0.1.1"

[build-dependencies]
gcc = "0.3.28"
